# bt_api_gateio

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
src/bt_api_ctp/containers/: __init__.py
src/bt_api_gateio/: plugin.py  registry_registration.py
src/bt_api_gateio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/bt_api_gateio/containers/balances/: __init__.py  gateio_balance.py
src/bt_api_gateio/containers/orderbooks/: __init__.py  gateio_orderbook.py
src/bt_api_gateio/containers/orders/: __init__.py  gateio_order.py
src/bt_api_gateio/containers/tickers/: __init__.py  gateio_ticker.py
src/bt_api_gateio/containers/trades/: __init__.py  gateio_trade.py
src/bt_api_gateio/errors/: __init__.py  gateio_translator.py
src/bt_api_gateio/exchange_data/: __init__.py  gateio_exchange_data.py
src/bt_api_gateio/feeds/live_gateio/: __init__.py  request_base.py  spot.py  swap.py
tests/: test_plugin_registration.py
tests/containers/balances/: test_gateio_balance.py
tests/containers/exchanges/: test_gateio_exchange_data.py
tests/containers/orderbooks/: test_gateio_orderbook.py
tests/containers/orders/: test_gateio_order.py
tests/containers/tickers/: test_gateio_ticker.py
tests/containers/trades/: test_gateio_trade.py
tests/exchange_registers/: test_register_gateio.py
tests/feeds/: test_gateio_request_base.py
