[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_gateio"
version = "0.15.0"
description = "Gate.io exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.entry-points."bt_api.plugins"]
gateio = "bt_api_gateio.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]
